# friendgd

./: CMakeLists.txt  README.md  mod.json
src/: FriendSimulation.cpp  FriendSimulation.hpp  main.cpp
